<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_comm</name>
  <version>0.0.0</version>
  <description>Tangewen Robot-Cloud Communication Node for Robot Side</description>
  <maintainer email="mayuke803@gmail.com">sunrise</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>audio_msg</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python3-grpcio</exec_depend>
  <exec_depend>python3-grpcio-tools</exec_depend>
  <exec_depend>python3-loguru</exec_depend>
  <exec_depend>python3-pyzmq</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
